<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ncea.calculusnceaapp.QuestionPage"
    tools:showIn="@layout/activity_question_page">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:text="@string/question"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView4"
            android:text="@string/differentiate_the_following"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.26" />

        <TextView
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pointsgained"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"
            android:textStyle="bold|italic"
            android:textColor="#ad49e3"
            android:gravity="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:contentDescription="@string/questionimage"
            android:src="@drawable/diff_q1"
            android:scaleType="matrix"
            android:layout_marginTop="49dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView5"
            android:layout_weight="0.23"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/choose_the_correct_answer" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/imageButton"
            android:contentDescription="@string/question_1_button"
            android:src="@drawable/diff_q1_1"
            android:onClick="NewQuestion" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/imageButton2"
            android:src="@drawable/diff_q1_2"
            android:contentDescription="@string/question_2_button"
            android:onClick="NewQuestion"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/imageButton3"
            android:contentDescription="@string/question_3_button"
            android:src="@drawable/diff_q1_3"
            android:onClick="NewQuestion"/>

    </LinearLayout>

</RelativeLayout>
