<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ncea.calculusnceaapp.Results">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:gravity="center|center_horizontal"
        android:text="@string/results_of_the_quiz"
        android:textSize="25sp"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView8"
        android:gravity="center_vertical|center"
        android:text="@string/results"
        android:textStyle="bold|italic"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView7"
        android:text="@string/insperationmessage"
        android:textColor="#da0303"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:id="@+id/button5"
        android:layout_marginTop="41dp"
        android:text="@string/end_quiz"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="endProgram"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:id="@+id/button6"
        android:text="@string/new_quiz"
        android:layout_alignTop="@+id/button5"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:onClick="newQuiz"/>

    <TextView
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:id="@+id/textView10"
        android:layout_alignBottom="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/button5" />

</RelativeLayout>
