<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ncea.calculusnceaapp.CalculusActivity"
    tools:showIn="@layout/activity_calculus">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ncea_level_3_calculus_revision_app"
        android:id="@+id/textView"
        android:textSize="36sp"
        android:textStyle="italic"
        android:textColor="#494949"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/differentiation"
        android:id="@+id/button"
        android:textSize="20sp"
        android:onClick="DiffStart"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/button"
        android:layout_marginTop="19dp"
        android:onClick="ComplexStart"
        android:text="@string/complex_numbers"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:layout_marginTop="12dp"
        android:onClick="math160Start"
        android:text="@string/math160"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />
</RelativeLayout>
